ajustes en la descripción de la documentación,
|- se ajusto 1 endpoint  a publico
